--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
     /* max-width: 450px; */
     display: grid;
     /* grid-template: 1fr 1fr/ 1fr 1fr; */
-    margin: 0 6px;
+    margin: 0 12px;
 }
 
 .title {
@@ -57,6 +57,7 @@ h1 {
 .logo {
     grid-row: 1;
     grid-column: 2;
+    margin-right: 24px; 
 }
 
 .logo img {
@@ -74,11 +75,11 @@ nav {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-button {
+/* button {
     width: 90%;
     margin-left: 0;
 
-}
+} */
 
 .button1 {
     grid-column: 1;
@@ -96,16 +97,59 @@ button {
     grid-column: 4;
 }
 
-button {
+/* button {
     font-size: 12px;
-}
+} */
 
-/* ---------- END HEADER ---------- */
+/* ---------- BUTTON ---------- */
+
+.myButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
+	background-color:#ffffff;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:12px;
+	font-weight:bold;
+	padding:6px 6px;
+	text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+    text-align: center;
+    margin-right: 6px;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+	background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
+	background-color:#f6f6f6;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
 
 /* ----- MAIN BODY / CONTENT ----- */
 
 .main-container {
-    margin: 0 6px;
+    margin: 0 12px;
     font-size: 12px;
 }
 
@@ -130,7 +174,7 @@ button {
     margin: 12px auto;
 }
 
-.first-proj {
+.first-proj, .second-proj {
     width: 100%;
     max-width: 450px;
     background-color: rgb(0, 0, 0, .8);
