--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     font-size: 24px;
-    color: white;
+    color: #ffffff;
     font-family: 'Karla', sans-serif;
     font-family: 'Lato', sans-serif;
     background-image: url("https://cdn-images-1.medium.com/max/1600/1*CqLPEo3Tw9SK6UoBl4FBuA.jpeg");
-    /* width: 100%; */
+    width: 100%;
+    height: 100%;
     background-size: 450px;
     background-repeat: no-repeat;
     background-position: center;
@@ -28,19 +29,12 @@ header {
 
 .header-container {
     width: 100%;
-    /* max-width: 450px; */
     display: grid;
-    /* grid-template: 1fr 1fr/ 1fr 1fr; */
-    margin: 0 12px;
-}
-
-.title {
-
 }
 
 h1 {
+    margin-left: 12px;
     font-size: 30px;
-    /* margin: 0 0 12px; */
     grid-row: 1;
     grid-column: 1;
 }
@@ -52,12 +46,13 @@ h1 {
 
 .header-text {
     margin: 0 0 12px;
+    margin-left: 12px;
 }
 
 .logo {
     grid-row: 1;
     grid-column: 2;
-    margin-right: 24px; 
+    /* margin-right: 24px;  */
 }
 
 .logo img {
@@ -75,13 +70,8 @@ nav {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-/* button {
-    width: 90%;
-    margin-left: 0;
-
-} */
-
 .button1 {
+    margin-left: 12px;
     grid-column: 1;
 }
 
