--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: 24px;
-    color: #ffffff;
+    /* color: #f6f6f6; */
+    color: white;
     font-family: 'Karla', sans-serif;
     font-family: 'Lato', sans-serif;
     background-image: url("https://cdn-images-1.medium.com/max/1600/1*CqLPEo3Tw9SK6UoBl4FBuA.jpeg");
@@ -68,6 +69,7 @@ h1 {
 nav {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: none;
 }
 
 .button1 {
