--- a/style.css
+++ b/style.css
@@ -4,13 +4,6 @@ body {
     color: white;
     font-family: 'Karla', sans-serif;
     font-family: 'Lato', sans-serif;
-    background-image: url("https://cdn-images-1.medium.com/max/1600/1*CqLPEo3Tw9SK6UoBl4FBuA.jpeg");
-    width: 100%;
-    height: 100%;
-    background-size: 450px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
     background-color: black;
 
 }
@@ -207,6 +200,17 @@ nav {
 
 @media screen and (min-width: 950px) {
 
+    body {
+        background-image: url("https://cdn-images-1.medium.com/max/1600/1*CqLPEo3Tw9SK6UoBl4FBuA.jpeg");
+        width: 100%;
+        height: 100%;
+        background-size: 450px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+    }
+
+
     .logo {
         margin-right: 12px;
         margin-left: auto;
@@ -246,14 +250,9 @@ nav {
         grid-column: 3;
     }
 
-    /* .work-pics-container {
+    .work-pics-container {
         display: flex;
         justify-content: space-between;
-    } */
-
-    .work-pics-container {
-        display: grid;
-        grid-template-columns: 450px / 1fr / 450px;
     }
 
     .work-pic {
@@ -289,6 +288,12 @@ nav {
     
     .second-proj {
         grid-column: 3;
+    }
+
+    .work-pics-container {
+        justify-content: unset;
+        display: grid;
+        grid-template-columns: 450px / 1fr / 450px;
     }
 
     .work-pics-container p {
