--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
     color: white;
     font-family: 'Karla', sans-serif;
     font-family: 'Lato', sans-serif;
+    background-image: url("https://cdn-images-1.medium.com/max/1600/1*CqLPEo3Tw9SK6UoBl4FBuA.jpeg");
+    width: 100%;
+    height: 100%;
+    background-size: 450px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     background-color: black;
 
 }
@@ -45,10 +52,8 @@ h1 {
 }
 
 .logo {
-    grid-row: 1 / span 2;
+    grid-row: 1;
     grid-column: 2;
-    margin-top: auto;
-    margin-bottom: auto;
     /* margin-right: 24px;  */
 }
 
@@ -182,6 +187,10 @@ nav {
     /* display: none; */
 }
 
+.work-pic1, .work-pic2 {
+    width: 100%;
+}
+
 
 /* ----- FOOTER ----- */
 
@@ -192,24 +201,28 @@ nav {
     margin: 24px auto auto;
 }
 
+.social-img a {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .linkedin, .twitter, .facebook {
     width: 75px;
     height: 75px;
     margin-bottom: 12px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#facebook-wrapper, #twitter-wrapper, #linkedin-wrapper {
+    background-color: white;
+    width: 75px;
+    height: 75px;
+    border: 1px solid white;
+    border-radius: 20%;
 }
 
 @media screen and (min-width: 950px) {
-
-    body {
-        background-image: url("https://cdn-images-1.medium.com/max/1600/1*CqLPEo3Tw9SK6UoBl4FBuA.jpeg");
-        width: 100%;
-        height: 100%;
-        background-size: 450px;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed; 
-    }
-
 
     .logo {
         margin-right: 12px;
@@ -242,14 +255,6 @@ nav {
         max-width: 950px;
     }
 
-    .first-proj {
-        grid-column: 1;
-    }
-    
-    .second-proj {
-        grid-column: 3;
-    }
-
     .work-pics-container {
         display: flex;
         justify-content: space-between;
@@ -257,7 +262,6 @@ nav {
 
     .work-pic {
         max-width: 450px;
-        text-align: center;
     }
 
     .social-img {
@@ -278,22 +282,6 @@ nav {
 
     .first-proj, .second-proj {
         max-width: 1400px;
-        background-color: rgb(0, 0, 0, 0);
-
-    }
-
-    .first-proj {
-        grid-column: 1;
-    }
-    
-    .second-proj {
-        grid-column: 3;
-    }
-
-    .work-pics-container {
-        justify-content: unset;
-        display: grid;
-        grid-template-columns: 450px / 1fr / 450px;
     }
 
     .work-pics-container p {
@@ -302,12 +290,4 @@ nav {
         margin-right: auto;
     }
 
-    /* .work-pic {
-        margin-left: 0;
-        margin-right: 0;
-    } */
-
-    .first-proj a {
-        text-align: center;
-    }
 }
