--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+
 body {
     font-size: 24px;
     /* color: #f6f6f6; */
@@ -32,13 +41,21 @@ header {
     width: 100%;
     max-width: 450px;
     display: grid;
+    grid-template: auto auto auto / auto;
+}
+
+/* .title holds "Spectre Design" */
+.title {
+    width: 250px;
+    grid-row: 1;
+    grid-column: 1;
+    margin: auto;
+    margin-left: 0;
 }
 
 h1 {
-    margin-left: 12px;
+    margin: 12px;
     font-size: 30px;
-    grid-row: 1;
-    grid-column: 1;
 }
 
 .header-text-container {
@@ -53,14 +70,19 @@ h1 {
 
 .logo {
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 1 / span 2;
     /* margin-right: 24px;  */
+    background-color: white;
+    margin: 12px;
+    margin-left: auto;
+    padding: 6px;
+    border-radius: 6px;
 }
 
 .logo img {
-    width: 100%;
-    max-width: 85px;
-    height: 75px;
+    /* width: 100%; */
+    width: 48px;
+    height: 48px;
     /* display: none; */
 }
 
@@ -69,6 +91,7 @@ h1 {
     grid-column: 1 / span 1;
     margin-bottom: 12px;
 }
+
 nav {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
