--- a/style.css
+++ b/style.css
@@ -30,6 +30,14 @@ body {
     margin-right: auto;
 }
 
+.display-none {
+    display: none;
+}
+
+.display-inline-block {
+    display: inline-block;
+}
+
 /* ---------- HEADER ---------- */
 
 header {
@@ -41,56 +49,79 @@ header {
     width: 100%;
     max-width: 450px;
     display: grid;
-    grid-template: auto auto auto / auto;
+    grid-template: auto auto auto / auto auto;
 }
 
 /* .title holds "Spectre Design" */
 .title {
+    display: inline-block;
     width: 250px;
     grid-row: 1;
     grid-column: 1;
-    margin: auto;
+    /* margin: auto; */
     margin-left: 0;
 }
 
 h1 {
-    margin: 12px;
+    margin: 0 0 0 12px;
     font-size: 30px;
+    display: inline-block;
 }
 
-.header-text-container {
-    grid-row: 0;
+#header-text-wrapper {
+    margin-top: 12px;
+    margin-bottom: auto;
+    max-width: 275px;
+    grid-row: 1;
     grid-column: 1;
 }
 
-.header-text {
-    margin: 0 0 12px;
-    margin-left: 12px;
+.header-text-container {
+    display: inline-block;
 }
 
-.logo {
+.header-text {
+    display: inline-block;
+    margin: 6px 0 0 12px;
+
+}
+
+.menu {
+    display: inline-block;
     grid-row: 1;
     grid-column: 1 / span 2;
-    /* margin-right: 24px;  */
     background-color: white;
-    margin: 12px;
     margin-left: auto;
+    margin-right: 12px;
+    margin-top: 15px;
+    margin-bottom: 12px;
     padding: 6px;
     border-radius: 6px;
-}
+    height: 60px;
 
-.logo img {
-    /* width: 100%; */
-    width: 48px;
-    height: 48px;
     /* display: none; */
 }
 
-.nav-container {
-    grid-row: 0;
-    grid-column: 1 / span 1;
-    margin-bottom: 12px;
+.menu img {
+    width: 48px;
+    height: 48px;
 }
+
+#nav-container {
+    /* grid-row: 0; */
+    grid-column: 1 / span 2;
+    margin-bottom: 12px;
+    margin-right: 6px;
+    /* visibility: hidden; */
+    opacity: 0;
+    transition: all 3s linear;
+}
+
+#nav-container.clicked {
+    /* visibility: visible; */
+    opacity: 1;
+}
+
 
 nav {
     display: grid;
