--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h1 {
     margin-bottom: 12px;
     margin-right: 6px;
     -webkit-transition: opacity 1s ease-out;
-    /* transition: opacity 1s ease-out; */
+    transition: opacity 1s ease-out;
     opacity: 0;
     height: 0;
     overflow: hidden;
