--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ h1 {
     grid-column: 1 / span 2;
     margin-bottom: 12px;
     margin-right: 6px;
-    -webkit-transition: opacity 1s ease-out;
+    /* -webkit-transition: opacity 1s ease-out; */
     transition: opacity 1s ease-out;
     opacity: 0;
     height: 0;
