--- a/style.css
+++ b/style.css
@@ -21,10 +21,6 @@ body {
     margin-right: auto;
 }
 
-/* .display-none {
-    display: none;
-} */
-
 .display-inline-block {
     display: inline-block;
 }
@@ -40,7 +36,7 @@ header {
     width: 100%;
     max-width: 450px;
     display: grid;
-    grid-template: auto auto auto / auto auto;
+    grid-template-rows: auto auto;
 }
 
 /* .title holds "Spectre Design" */
@@ -89,9 +85,13 @@ h1 {
     padding: 6px;
     border-radius: 6px;
     height: 60px;
-    filter: invert(0%);
+    filter: invert(100%);
     transition-duration: 500ms;
-    transition-property: filter, transform;
+    transition-property: filter, transform, opacity;
+}
+
+.menu:hover {
+    opacity: .5;
 }
 
 .menu.clicked {
@@ -107,7 +107,6 @@ h1 {
 #nav-container {
     grid-column: 1 / span 2;
     margin-bottom: 12px;
-    /* margin-right: 6px; */
     transition-property: opacity, height;
     -webkit-transition-property: opacity, height;
     transition-duration: 500ms;
@@ -118,96 +117,64 @@ h1 {
     height: 0;
     overflow: hidden;
     max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #nav-container.clicked {
     opacity: 1;
-    height: 28px;
+    height: 32px;
 }
 
 
 nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-row: 1;
+    grid-column: 1 / span 2;
+    display: flex;
+    justify-content: space-between;
 }
 
 .main-nav button {
-    border: 3px solid white;
+    border: 1px solid white;
+    padding: 6px;
+    font-size: 12px;
+    color: white;
+    background-color: transparent;
     width: 72px;
+    transition-property: opacity, height;
+    transition-duration: 500ms;
+}
+
+.main-nav button:hover {
+    opacity: .5;
 }
 
 .button1 {
     margin-left: 12px;
+    margin-right: 6px;
     grid-column: 1;
 }
 
 .button2 {
     grid-column: 2;
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 .button3 {
     grid-column: 3;
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 .button4 {
     grid-column: 4;
+    margin-left: 6px;
+    margin-right: 12px;
 }
-
-/* button {
-    font-size: 12px;
-} */
 
 /* ---------- BUTTON ---------- */
 
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
-	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-	background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-	background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-	background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
-	background-color:#ffffff;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:pointer;
-	color:#666666;
-	font-family:Arial;
-	font-size:12px;
-	font-weight:bold;
-	padding:6px 6px;
-	text-decoration:none;
-    text-shadow:0px 1px 0px #ffffff;
-    text-align: center;
-    margin-right: 6px;
-}
-
-.myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
-	background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-	background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-	background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-	background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
-	background-color:#f6f6f6;
-}
-
-.myButton:active {
-	position:relative;
-	top:1px;
-}
-
-/* Had to add this down here to overwrite button settings */
-.button4 {
-    margin-right: 12px;
-}
 
 /* ----- MAIN BODY / CONTENT ----- */
 
@@ -243,7 +210,7 @@ nav {
     max-width: 450px;
 }
 
-.first-proj, .second-proj {
+.proj {
     width: 100%;
     max-width: 450px;
     background-color: rgb(0, 0, 0, .8);
@@ -274,7 +241,7 @@ nav {
     margin-right: auto;
 }
 
-.linkedin, .twitter, .facebook {
+.linkedin, .github, .facebook {
     width: 75px;
     height: 75px;
     margin-bottom: 12px;
@@ -282,7 +249,7 @@ nav {
     margin-right: auto;
 }
 
-#facebook-wrapper, #twitter-wrapper, #linkedin-wrapper {
+#facebook-wrapper, #github-wrapper, #linkedin-wrapper {
     width: 75px;
     height: 75px;
     filter: invert(100%);
@@ -297,6 +264,18 @@ nav {
 
     .header-container {
         max-width: 950px;
+    }
+
+    .main-nav button {
+        font-size: 18px;
+        width: 80px;
+    }
+
+
+    /* Transition effect, needed to change height for button sizing */
+    #nav-container.clicked {
+        opacity: 1;
+        height: 34px;
     }
 
     .main-container, .home-para-container {
@@ -317,7 +296,7 @@ nav {
         margin: 12px 12px;
     }
 
-    .first-proj, .second-proj {
+    .proj {
         max-width: 950px;
     }
 
@@ -346,7 +325,7 @@ nav {
         max-width: 1400px;
     }
 
-    .first-proj, .second-proj {
+    .proj {
         max-width: 1400px;
     }
 
