--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Karla', sans-serif;
     font-family: 'Lato', sans-serif;
     background-color: black;
+    text-align: center;
 }
 
 .center {
@@ -88,6 +89,7 @@ h1 {
     filter: invert(100%);
     transition-duration: 500ms;
     transition-property: filter, transform, opacity;
+    transition-timing-function: ease-out;
 }
 
 .menu:hover {
@@ -173,10 +175,11 @@ nav {
     margin-right: 12px;
 }
 
-/* ---------- BUTTON ---------- */
 
 
 /* ----- MAIN BODY / CONTENT ----- */
+
+
 
 .main-container {
     padding: auto 12px;
@@ -189,7 +192,7 @@ nav {
 }
 
 .home-para-container {
-    text-align: justify;
+
     background-color: rgb(0, 0, 0, .8);
     padding-top: 12px;
     padding-bottom: 12px;
@@ -197,6 +200,11 @@ nav {
 
 .home-para {
     margin: 0 auto;
+}
+
+#please-note {
+    color: yellow;
+    font-style: italic;
 }
 
 .faux-divider1, .faux-divider2, .faux-divider3 {
@@ -300,10 +308,12 @@ nav {
         max-width: 950px;
     }
 
-    .work-pics-container {
+    /* .work-pics-container {
         display: flex;
         justify-content: space-between;
-    }
+    } */
+
+
 
     .work-pic {
         max-width: 450px;
