--- a/style.css
+++ b/style.css
@@ -247,7 +247,16 @@ nav {
     margin-bottom: 12px;
     margin-left: auto;
     margin-right: auto;
+    opacity: 1;
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: ease-out;
+    border-radius: 100%;
 }
+
+.linkedin:hover, .github:hover, .facebook:hover {
+    opacity: .5;
+} 
 
 #facebook-wrapper, #github-wrapper, #linkedin-wrapper {
     width: 75px;
